--- a/OnlineKart/appsettings.json
+++ b/OnlineKart/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=PRITAM\\SQLEXPRESS;Database=OnKart;Trusted_Connection=True;TrustServerCertificate=true"
+    }
 }
